<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin"
        tools:context=".AddBookActivity">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/addimage"/>

        <EditText
            android:id="@+id/edit_book_name"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords"
            app:layout_constraintLeft_toRightOf="@+id/book_image"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/category_text_view"
            style="@style/FieldNameStyle"
            android:text="@string/category_text_view"
            app:layout_constraintTop_toBottomOf="@+id/book_image" />

        <Spinner
            android:id="@+id/spinner_book_category"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_category"
            android:inputType="textCapWords"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@+id/category_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_image"/>

        <TextView
            android:id="@+id/price_text_view"
            style="@style/FieldNameStyle"
            android:text="@string/price_text_view"
            app:layout_constraintTop_toBottomOf="@+id/category_text_view" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_price"
            android:inputType="number"
            android:paddingLeft="@dimen/list_item_padding"
            app:layout_constraintLeft_toRightOf="@+id/price_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_book_category" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/FieldNameStyle"
            android:text="@string/quantity_text_view"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />


        <Button
            android:id="@+id/decrease_quantity"
            style="@style/QuantityButton"
            android:onClick="decrement"
            android:text="-"
            app:layout_constraintStart_toEndOf="@+id/quantity_text_view"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="number"
            android:paddingLeft="@dimen/list_item_padding"
            app:layout_constraintEnd_toStartOf="@id/increase_quantity"
            app:layout_constraintStart_toEndOf="@+id/decrease_quantity"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

        <Button
            android:id="@+id/increase_quantity"
            style="@style/QuantityButton"
            android:onClick="increment"
            android:text="+"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_book_quantity"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />


        <TextView
            android:id="@+id/supplier_name_text_view"
            style="@style/FieldNameStyle"
            android:text="@string/supplier_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

        <EditText
            android:id="@+id/edit_book_supplier_name"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_supplier_name"
            app:layout_constraintLeft_toRightOf="@+id/supplier_name_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

        <TextView
            android:id="@+id/supplier_phone_number_text_view"
            style="@style/FieldNameStyle"
            android:text="@string/supplier_phone_text_view"
            app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view" />

        <EditText
            android:id="@+id/edit_book_supplier_phone_number"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_supplier_phone_number"
            android:inputType="phone"
            app:layout_constraintLeft_toRightOf="@+id/supplier_phone_number_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view" />

        <Button
            android:id="@+id/contact_supplier"
            style="@style/ContactButtonStyle"
            android:onClick="ContactSupplier"
            android:text="@string/contact_supplier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_book_supplier_phone_number" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>